--- a/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/Source/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ArrowsController.cs" />
     <Compile Include="CameraMoveClass.cs" />
+    <Compile Include="SingleUpdateRunner.cs" />
     <Compile Include="Effect controllers\BrightExtractController.cs" />
     <Compile Include="Effect controllers\CombineController.cs" />
     <Compile Include="Effect controllers\LightingController.cs" />
