--- a/EngineQ/Source/EngineQScripting/EngineQScripting.csproj
+++ b/EngineQ/Source/EngineQScripting/EngineQScripting.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Subsystems\Application.cs" />
     <Compile Include="Subsystems\Input.cs" />
     <Compile Include="Subsystems\PrefabGenerator.cs" />
+    <Compile Include="Subsystems\Profiler.cs" />
     <Compile Include="Subsystems\ResourceManager.cs" />
     <Compile Include="Subsystems\Time.cs" />
   </ItemGroup>
